<resources>
    <string name="app_name">Avoid Q</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_start">start</string>
    <string name="title_activity_register">register</string>
    <string name="string_enter_name">Enter your name</string>
    <string name="string_choose_username">Enter your surname</string>
    <string name="string_choose_password">Enter your password</string>
    <string name="string_confirm_password">Confirm your password</string>
    <string name="string_enter_email">Enter your email</string>
    <string name="button_register">Register</string>


    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
    <string name="industry_type_id">Industry Type Id : </string>
    <string name="website">Website : </string>
    <string name="theme">Theme : </string>
    <string name="cust_email_id">Email Id : </string>
    <string name="cust_mobile_no">Mobile Number : </string>
    <string name="merchant_id">Merchant Id : </string>
    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sample_order_id">ORDER</string>
    <string name="sample_customer_id">CUST23657</string>
    <string name="sample_transaction_amount">1</string>
    <string name="sample_channel_id">WAP</string>
    <string name="sample_industry_type_id">Retail</string>
    <string name="sample_website">worldpressplg</string>
    <string name="sample_theme">merchant</string>
    <string name="sample_cust_email_id">abc@gmail.com</string>
    <string name="sample_cust_mobile_no">123</string>
    <string name="sample_merchant_id_staging">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>

    <!-- Strings related to login -->
    <string name="account_settings">Account Settings....</string>
    <string name="save_changes">Save Changes</string>
    <string name="prompt_email">Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_new_password">Re-enter New Password</string>

    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_mobile">Mobile No.</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Not registered yet?</string>
    <string name="action_register_short">Submit</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="enter_10_digit_mob_no">Enter 10 digit mobile no.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_welcome_page">Avoid Q</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="next"> Next </string>
    <string name="skip"> Skip </string>
    <string name="start"> Start </string>
</resources>
