<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/parents">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order Details"
                android:textStyle="bold"
                android:textSize="18dip"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@string/abc_font_family_body_2_material"
                android:textColor="#000000"
                android:layout_marginBottom="10dip"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/order_id"

                        android:textSize="16dip"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                       />

                    <EditText
                        android:id="@+id/order_id"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/sample_order_id"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/customer_id"

                        android:textSize="16dip"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        />

                    <EditText
                        android:id="@+id/customer_id"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"

                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/transaction_amount"

                        android:textSize="16dip"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        />

                    <EditText
                        android:id="@+id/transaction_amount"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/cust_email_id"

                        android:textSize="16dip"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        />

                    <EditText
                        android:id="@+id/cust_email_id"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/cust_mobile_no"

                        android:textSize="16dip"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        />

                    <EditText
                        android:id="@+id/cust_mobile_no"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:singleLine="true" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Merchant Properties"

                android:textSize="18dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:fontFamily="@string/abc_font_family_body_2_material"
                android:textColor="#000000"
                android:layout_marginBottom="10dip"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/merchant_id"

                        android:textSize="16dip"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                       />

                    <EditText
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:id="@+id/merchant_id"
                        android:text="@string/sample_merchant_id_staging"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/channel_id"

                        android:textSize="16dip"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        />

                    <EditText
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:id="@+id/channel_id"
                        android:text="@string/sample_channel_id"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/industry_type_id"

                        android:textSize="16dip"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        />

                    <EditText
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:id="@+id/industry_type_id"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:text="@string/sample_industry_type_id"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/website"

                        android:textSize="16dip"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                       />

                    <EditText
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:id="@+id/website"
                        android:text="@string/sample_website"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/theme"

                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:textSize="16dip"
                       />

                    <EditText
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:id="@+id/theme"
                        android:text="@string/sample_theme"
                        android:fontFamily="@string/abc_font_family_body_2_material"
                        android:textColor="#000000"
                        android:singleLine="true"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:weightSum="1"
            android:visibility="gone"
            android:id="@+id/checksum_generation">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/checksum_generation_url"

                android:textSize="16dip"
                android:fontFamily="@string/abc_font_family_body_2_material"
                android:textColor="#000000"
                android:gravity="right"/>

            <EditText
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:id="@+id/checksum_generation_url"
                android:text="@string/sample_checksum_generation_url"
                android:fontFamily="@string/abc_font_family_body_2_material"
                android:textColor="#000000"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:weightSum="1"
            android:visibility="gone"
            android:id="@+id/checksum_verification">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/checksum_verification_url"

                android:fontFamily="@string/abc_font_family_body_2_material"
                android:textColor="#000000"
                android:textSize="16dip"
                android:gravity="right"/>

            <EditText
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:fontFamily="@string/abc_font_family_body_2_material"
                android:textColor="#000000"
                android:layout_weight="0.50"
                android:id="@+id/checksum_verification_url"
                android:text="@string/sample_checksum_verification_url"
                android:singleLine="true"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start_transaction"
            android:text="@string/start_transaction"
            android:onClick="onStartTransaction"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:fontFamily="@string/abc_font_family_body_2_material"
            android:textColor="#ffffff"
            android:textSize="16dip"
            android:background="#CD0000"
            android:layout_marginTop="10dip"/>

    </LinearLayout>

</ScrollView>